community/phosh: replace cantarell/source-code-pro with adwaita-fonts

--- a/community/phosh/APKBUILD
+++ b/community/phosh/APKBUILD
@@ -5,7 +5,7 @@
 # Maintainer: team/phosh <newbyte@postmarketos.org>
 pkgname=phosh
 pkgver=0.45.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Wayland shell for GNOME on mobile devices"
 # armhf: blocked by gnome-shell-schemas
 arch="all !armhf"
@@ -13,13 +13,12 @@ url="https://gitlab.gnome.org/World/Phosh/phosh"
 license="GPL-3.0-only"
 triggers="$pkgname.trigger=/usr/lib/phosh/plugins/prefs"
 depends="
+	adwaita-fonts
 	adwaita-icon-theme
 	bash
 	dbus-x11
 	dbus:org.freedesktop.Secrets
 	desktop-file-utils
-	font-adobe-source-code-pro
-	font-cantarell
 	gnome-control-center
 	gnome-session
 	gnome-settings-daemon
