community/libadwaita: depend on adwaita-fonts
Most libadwaita apps are designed and tested with adwaita-fonts (and in
general, the Adwaita design platform) in mind.

See https://gitlab.alpinelinux.org/alpine/aports/-/merge_requests/81597#note_491634

--- a/community/libadwaita/APKBUILD
+++ b/community/libadwaita/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: team/gnome <fossdd@pwned.life>
 pkgname=libadwaita
 pkgver=1.7.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Building blocks for modern GNOME applications"
 url="https://gitlab.gnome.org/GNOME/libadwaita"
 arch="all"
 license="LGPL-2.1-or-later"
+depends="adwaita-fonts"
 makedepends="
 	appstream-dev
 	fribidi-dev
