community/safeeyes: upgrade to 2.2.3
This also creates a new subpkg for X11 systems, and adds xprintidle as a
dependency of this subpkg. This tool doesn't work at all on wayland, and
safeeyes complains about it.

--- a/community/safeeyes/APKBUILD
+++ b/community/safeeyes/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Anjandev Momi <anjan@momi.ca>
 # Maintainer: Anjandev Momi <anjan@momi.ca>
 pkgname=safeeyes
-pkgver=2.2.2
+pkgver=2.2.3
 pkgrel=0
 pkgdesc="Protect your eyes from eye strain using this simple and beautiful, yet extensible break reminder"
 url="http://slgobinath.github.io/SafeEyes/"
@@ -14,10 +14,9 @@ depends="
 	py3-psutil
 	py3-xlib
 	python3
-	xprintidle
 	"
 makedepends="py3-setuptools"
-subpackages="$pkgname-pyc"
+subpackages="$pkgname-pyc $pkgname-x11"
 source="$pkgname-$pkgver.tar.gz::https://github.com/slgobinath/SafeEyes/archive/refs/tags/v$pkgver.tar.gz"
 builddir="$srcdir/SafeEyes-$pkgver"
 options="!check" # no upstream checks
@@ -34,6 +33,13 @@ package() {
 	python3 setup.py install --skip-build --root="$pkgdir"
 }
 
+x11() {
+	install_if="$pkgname=$pkgver-r$pkgrel xorg-server"
+	depends="xprintidle"
+
+	mkdir -p "$subpkgdir"
+}
+
 sha512sums="
-f3a274df921368572fc80b406746d628f5976457c0a4314b1f7e013bbc10340c9e6d757cf9c692e51fdd0e8b3f335b53a4268bbad96c95a978bdee2ead19246e  safeeyes-2.2.2.tar.gz
+5d5e1d94dd9ca3c3beb52bbf03b0578d12664f030dda7ce8a5e14061eafbce12eb95d477cae391357e1a3cfe68c0af44c872a0ea78bce982f4b39b8d0b0835bb  safeeyes-2.2.3.tar.gz
 "
