--- a/community/libkdepim/APKBUILD
+++ b/community/libkdepim/APKBUILD
@@ -8,8 +8,8 @@ pkgver=24.12.3
 pkgrel=0
 pkgdesc="Lib for common KDEPim apps"
 # armhf blocked by extra-cmake-modules
-# ppc64le, s390x, riscv64 and loongarch64 blocked by qt6-qtwebengine -> akonadi
-arch="all !armhf !ppc64le !s390x !riscv64 !loongarch64"
+# ppc64le, s390x and riscv64 blocked by qt6-qtwebengine -> akonadi
+arch="all !armhf !ppc64le !s390x !riscv64"
 url="https://community.kde.org/KDE_PIM"
 license="GPL-2.0-or-later AND LGPL-2.0-or-later"
 depends_dev="
