--- a/community/pimcommon/APKBUILD
+++ b/community/pimcommon/APKBUILD
@@ -7,8 +7,8 @@ pkgname=pimcommon
 pkgver=24.12.3
 pkgrel=0
 pkgdesc="Common lib for KDEPim"
-# armhf, ppc64le, s390x, riscv64 and loongarch64 blocked by qt6-qtwebengine -> akonadi
-arch="all !armhf !ppc64le !s390x !riscv64 !loongarch64"
+# armhf, ppc64le, s390x and riscv64 blocked by qt6-qtwebengine -> akonadi
+arch="all !armhf !ppc64le !s390x !riscv64"
 url='https://community.kde.org/KDE_PIM'
 license="GPL-2.0-or-later"
 depends_dev="
