--- a/main/llvm17/APKBUILD
+++ b/main/llvm17/APKBUILD
@@ -58,7 +58,7 @@ if [ "$CBUILD" != "$CHOST" ]; then
 		_llvm_tblgen="llvm$_majorver-tblgen"
 	fi
 	makedepends_build="$makedepends_build cmd:$_llvm_tblgen"
-	cmake_cross_options="
+	_cmake_cross_options="
 		-DCMAKE_CROSSCOMPILING=ON
 		-DLLVM_TABLEGEN=/usr/bin/$_llvm_tblgen
 	"
@@ -158,7 +158,7 @@ build() {
 		-DLLVM_INSTALL_UTILS=ON \
 		-DLLVM_LINK_LLVM_DYLIB=ON \
 		-DLLVM_USE_PERF=ON \
-		$cmake_cross_options
+		$_cmake_cross_options
 
 	cmake --build build
 
