community/xapp: upgrade to 2.8.8
and take over maintainership
https://github.com/linuxmint/xapp/archive/refs/tags/2.8.8.tar.gz

--- a/community/xapp/APKBUILD
+++ b/community/xapp/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Clayton Craft <clayton@craftyguy.net>
-# Maintainer:
+# Maintainer: Jingyun Hua <huajingyun@loongson.cn>
 pkgname=xapp
-pkgver=2.8.7
+pkgver=2.8.8
 pkgrel=0
 pkgdesc="Components which are common to X-Apps"
 arch="all"
@@ -29,5 +29,5 @@ package() {
 }
 
 sha512sums="
-c8b83ca70a38d4d84dd00a8e5795649443aa34e683055da8cdd4e0ffa5458fa7597c5119c9515034fd02ce6f730dce717c18400e4e2d4a15cef42c44cb7dc969  xapp-2.8.7.tar.gz
+0c876d0fa59da10fd079d3c38879ace398dbe99a6351a5437b60c87c2c339799f5228260653d9c03b8efab8c310519fc7edba5eca8f571e683bf06b7aee88403  xapp-2.8.8.tar.gz
 "
