main/xfsprogs: upgrade to 6.13.0
https://web.git.kernel.org/pub/scm/fs/xfs/xfsprogs-dev.git/tree/doc/CHANGES?h=v6.13.0

--- a/main/xfsprogs/APKBUILD
+++ b/main/xfsprogs/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xfsprogs
-pkgver=6.12.0
-pkgrel=1
+pkgver=6.13.0
+pkgrel=0
 pkgdesc="XFS filesystem utilities"
 url="https://xfs.org/index.php/Main_Page"
 arch="all"
@@ -19,7 +19,9 @@ makedepends="
 	"
 options="!check"  # no test suite
 subpackages="$pkgname-dev $pkgname-doc $pkgname-libs $pkgname-extra"
-source="https://mirrors.edge.kernel.org/pub/linux/utils/fs/xfs/xfsprogs/xfsprogs-$pkgver.tar.xz"
+source="https://mirrors.edge.kernel.org/pub/linux/utils/fs/xfs/xfsprogs/xfsprogs-$pkgver.tar.xz
+	filesize-return-type.patch
+	"
 
 build() {
 	export DEBUG=-DNDEBUG
@@ -60,5 +62,6 @@ extra() {
 }
 
 sha512sums="
-020810b4a261f4ab4eb94aae813f22b26bb9f17705967198189509e684422361dd80af938e4a77cf326353d5d61d5aeaaee9a34e8a7b8ed1dddd63b7ad1b0510  xfsprogs-6.12.0.tar.xz
+9fd73c8585cd295b79b227cd5855407da4b3ea2d40a1ca82e0a93887644b497cced182960bcd8f3c45805dda4a244d1555fd49da5d7e82fe4525d345c766a63a  xfsprogs-6.13.0.tar.xz
+ee1017cfccc5e3f9c8701e85c0b42e4c67ceae45acda7377bebe2264126ec2bf70fcc7befa3823b11881532417bedc5c2f8695d9845db0be01432037c5b774f3  filesize-return-type.patch
 "
