--- a/main/kamailio/APKBUILD
+++ b/main/kamailio/APKBUILD
@@ -5,7 +5,7 @@
 # Maintainer: Nathan Angelacos <nangel@alpinelinux.org>
 
 pkgname=kamailio
-pkgver=5.8.4
+pkgver=6.0.1
 pkgrel=0
 
 # If building from a git snapshot, specify the gitcommit
@@ -26,6 +26,7 @@ license="GPL-2.0-or-later"
 options="!check" # no testsuite
 depends="gawk"
 makedepends="bison
+	cmake
 	confuse-dev
 	curl-dev
 	expat-dev
@@ -100,24 +101,21 @@ _mod_list_basic="avp async auth benchmark blst cfg_rpc cfgt cfgutils corex count
 		pv_headers kemix dlgs"
 
 # - extra used modules, with no extra dependency
-_mod_list_extras="auth_diameter auth_xkeys call_control cfgt cnxcc dmq dmq_usrloc \
-		domainpolicy file_out influxdbc log_custom msrp nosip pdb qos \
+_mod_list_extras="auth_diameter auth_xkeys call_control call_obj cnxcc dmq dmq_usrloc \
+		domainpolicy file_out influxdbc log_custom msrp nosip pdb qos pvtpl \
 		rtjson sca seas sms sst statsd tcpops timer tmrec tsilo \
 		uac_redirect xhttp xhttp_rpc xprint"
 
 # - common modules depending on database
 _mod_list_db="acc alias_db auth_db avpops cfg_db db_flatstore \
 		db_cluster dialog dispatcher domain drouting group \
-		htable imc matrix mohqueue msilo mtree p_usrloc pdt permissions \
+		htable topos_htable imc matrix mohqueue msilo mtree p_usrloc pdt permissions \
 		pipelimit prefix_route registrar sipcapture siptrace speeddial \
 		sqlops uac uri_db userblocklist usrloc"
 
 # - common modules depending on database, using UID db schema
 _mod_list_dbuid="db2_ops uid_auth_db uid_avp_db uid_domain uid_gflags \
 		uid_uri_db"
-
-# - modules for devel purposes
-_mod_list_devel="print print_lib"
 
 # - modules depending on pcre3 library
 _mod_list_pcre="dialplan lcr regex"
@@ -188,13 +186,13 @@ _mod_list_authephemeral="auth_ephemeral"
 # - modules related to SIMPLE presence extensions
 _mod_list_presence="presence presence_conference presence_dialoginfo \
 			presence_mwi presence_profile presence_reginfo \
-			presence_xml \
+			presence_xml presence_dfks \
 			pua pua_bla pua_dialoginfo pua_reginfo \
 			pua_rpc pua_usrloc pua_xmpp \
 			rls xcap_client xcap_server"
 
 # - modules depending on lua library
-_mod_list_lua="app_lua app_lua_sr"
+_mod_list_lua="app_lua"
 
 # - modules depending on perl library
 _mod_list_perl="app_perl db_perlvdb"
@@ -233,7 +231,7 @@ _mod_list_redis="db_redis ndb_redis topos_redis"
 _mod_list_mono="app_mono"
 
 # - modules related to IMS extensions
-_mod_list_ims="cdp cdp_avp ims_dialog ims_diameter_server ims_auth \
+_mod_list_ims="cdp cdp_avp ims_dialog ims_diameter_server ims_auth ims_qos_npn \
 		ims_ipsec_pcscf ims_isc ims_icscf ims_qos ims_registrar_pcscf \
 		ims_registrar_scscf ims_usrloc_pcscf ims_ocs ims_usrloc_scscf \
 		ims_charging"
@@ -277,9 +275,11 @@ _mod_list_gcrypt="gcrypt"
 # - modules depending on libmicrohttpd
 _mod_list_microhttpd="microhttpd"
 
+# - modules depending on nghttp2 library
+_mod_list_nghttp2=nghttp2
 
 # Alpine Specific
-_mod_list_debugger="$_mod_list_devel benchmark debugger"
+_mod_list_debugger="benchmark debugger"
 
 # Standard modules in main pkg
 _module_group_kstandard="$_mod_list_basic $_mod_list_dbuid $_mod_list_pcre"
@@ -293,8 +293,8 @@ for _i in db postgres sqlite dbtext mysql \
 	ldap utils tls tlsa presence lua ims outbound debugger \
 	extras json websocket authephemeral \
 	uuid ev memcached redis geoip2 jansson sipdump \
-	jsdt http_async kazoo rabbitmq sctp radius perl \
-	python3 mqtt ruby gcrypt; do
+	jsdt http_async nghttp2 kazoo rabbitmq \
+	sctp radius perl python3 mqtt ruby gcrypt; do
 
 	subpackages="$subpackages $pkgname-$_i"
 	eval "_modules=\"\$_modules \$_mod_list_$_i\""
@@ -605,6 +605,10 @@ microhttpd() {
 		"$_mod_list_microhttpd"
 }
 
+nghttp2() {
+	_generic_pkg "HTTP2 server implementation using nghttp2 library" \
+		"$_mod_list_nghttp2"
+}
 gcrypt() {
 	_generic_pkg "Cryptography functions using libcrypt" \
 		"$_mod_list_gcrypt"
@@ -612,6 +616,6 @@ gcrypt() {
 
 
 sha512sums="
-198b4a0d30eae97a331486dfb53e36457526c78362a664272d0e53fb16bad5c3d97171af72e7b55f1ef227f96e7f051a95397298a025d9e3d9446115dbfa1cd5  kamailio-5.8.4.tar.gz
+f0a318ea2c361a14c2b023e940510e612f6dafa9ee3b6352ca66f5d1dda3670c2f3b1d27c3d610256b1e4996533b3d2dbd62a7f2f78462841c9beb863c82580e  kamailio-6.0.1.tar.gz
 38a786b48d433b2e99a29249458c1ffcc3f449a1898df6ef1f4b8ebf7770e99d80ce6e3340ea680b44e725b951e65fd06d395ecb903600d7c8fdc0a736c4d9b1  kamailio.initd
 "
