--- a/community/py3-curl/APKBUILD
+++ b/community/py3-curl/APKBUILD
@@ -1,14 +1,26 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=py3-curl
 _pkgname=pycurl
-pkgver=7.45.3
+pkgver=7.45.6
 pkgrel=0
 pkgdesc="Python3 interface to libcurl"
 url="http://pycurl.io/"
 arch="all"
 license="LGPL-2.0-or-later MIT"
-makedepends="curl-dev openssl-dev>3 python3-dev py3-setuptools"
-subpackages="$pkgname-pyc"
+makedepends="
+	curl-dev
+	openssl-dev>3
+	py3-gpep517
+	py3-setuptools
+	py3-wheel
+	python3-dev
+	"
+checkdepends="
+	py3-pytest
+	py3-flask
+	py3-flaky
+	"
+subpackages="$pkgname-doc $pkgname-pyc"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
@@ -17,14 +29,20 @@ provides="py-curl=$pkgver-r$pkgrel" # Backwards compatibility
 
 build() {
 	export PYCURL_SSL_LIBRARY=openssl
-	python3 setup.py build
+	gpep517 build-wheel --wheel-dir .dist --output-fd 3 3>&1 >&2
+	want_check && make -C tests/fake-curl/libcurl
+}
+
+check() {
+	python3 -m venv --clear --without-pip --system-site-packages .testenv
+	.testenv/bin/python3 -m installer .dist/*.whl
+	.testenv/bin/python3 -m pytest
 }
 
 package() {
-	python3 setup.py install --skip-build --root="$pkgdir"
-	rm -Rf "$pkgdir"/usr/share  # remove docs
+	python3 -m installer -d "$pkgdir" .dist/*.whl
 }
 
 sha512sums="
-12a55070602a1fd22b160ad582a4001bdd28531d2b2ccd365ff0136bc13dd23af80b19488bdbbc60a902a3a362b64383b9ae6acce6ed328c74dcffc8a6a3f4ad  pycurl-7.45.3.tar.gz
+4eb53cbb3c8801950c76adb920b30919ca9f70e3f93dcef898d048244c475ec4a135590d173398efeb7642be33c11cb1742cb2519713088223870141e0cef8b3  pycurl-7.45.6.tar.gz
 "
