testing/sq: skip failing test
`TestJSONData_Cities/cities.large.json` timed out on edge x86_64 builder
after 2h.

--- a/testing/sq/APKBUILD
+++ b/testing/sq/APKBUILD
@@ -49,7 +49,9 @@ check() {
 	# shellcheck disable=2046
 	case "$CARCH" in
 		# TestCompleteFilterActiveGroup: failed on the builder
-		x86_64) go test -v -timeout 120m -skip 'TestCompleteFilterActiveGroup' \
+		# TestJSONData_Cities: test timed out after 2h0m0s
+		x86_64) go test -v -timeout 60m \
+			-skip 'Test(CompleteFilterActiveGroup|JSONData_Cities)' \
 			$(go list ./... | grep -v /libsq/driver) ;;
 		*) go test -v -timeout 60m $(go list ./... | grep -v /libsq/driver) ;;
 	esac
