community/fwupd: rebuild against libcbor 0.12.0, fix build with pango >=1.56.3
Fix build error with pango >=1.56.3, found during a rebuild against
libcbor 0.12.0:

```
ninja: job failed: /usr/bin/python3 ../plugins/uefi-capsule/make-images.py --podir /home/builder/builds/fwupd/src/fwupd-2.0.6/po --label 'Installing firmware update…' --out plugins/uefi-capsule/uefi-capsule-ux.tar.xz
Traceback (most recent call last):
  File "/home/builder/builds/fwupd/src/fwupd-2.0.6/output/../plugins/uefi-capsule/make-images.py", line 215, in <module>
    sys.exit(main(parser.parse_args()))
             ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/builder/builds/fwupd/src/fwupd-2.0.6/output/../plugins/uefi-capsule/make-images.py", line 145, in main
    Pango.shape(label_translated, length, items[0].analysis, gs)
TypeError: Pango.shape() takes exactly 3 arguments (4 given)
```

--- a/community/fwupd/APKBUILD
+++ b/community/fwupd/APKBUILD
@@ -2,7 +2,7 @@
 maintainer="fossdd <fossdd@pwned.life>"
 pkgname=fwupd
 pkgver=2.0.6
-pkgrel=0
+pkgrel=1
 pkgdesc="Firmware update daemon"
 url="https://fwupd.org/"
 # armhf, ppc64le and s390x blocked by gnu-efi/fwupd-efi
@@ -69,6 +69,7 @@ subpackages="
 source="https://github.com/fwupd/fwupd/releases/download/$pkgver/fwupd-$pkgver.tar.xz
 	$pkgname.initd
 	$pkgname.confd
+	pango-1.56.2.patch
 	"
 
 # libsmbios is a library for DELL devices which are x86/x86_64-only
@@ -152,4 +153,5 @@ sha512sums="
 44ad50ea0f3072dcb4fd204bd406fa2933705d77f6647c5dc917f74534d7218918ba8a174dab2319528905421bbe2e192a86a397fc5e336d2f15213fb96d8b32  fwupd-2.0.6.tar.xz
 2c34891ec273aa1a4d105602cd5e99add5a17d6e240fa93a015d5bb2e11e54937b04781de2a854c472be376524b50fc5bb48edf7b875afb54e3ca07dcda117b0  fwupd.initd
 0bf773a2c52b0306e99e5192d259f38cce8a25487e95a41b6e0200a1ed629235971795a1f9ba12a633cd902671d888610695658f2cc2c750e2afca70f87ee589  fwupd.confd
+c80f912122c4ec955961260a091b6f8d3162ba44e211e5a8ddb804977e5245592c95b05888040df4afa74c875b2ab0f08d6dd824429c85f7caf2348c3274c6bd  pango-1.56.2.patch
 "
