community/vte3: move Gtk4 desktop files to gtk4 subpackage

--- a/community/vte3/APKBUILD
+++ b/community/vte3/APKBUILD
@@ -55,6 +55,8 @@ gtk4() {
 
 	amove usr/bin/vte-*-gtk4
 	amove usr/lib/libvte-*-gtk4.so.*
+	amove usr/share/xdg-terminals/org.gnome.Vte.App.Gtk4.desktop
+	amove usr/share/applications/org.gnome.Vte.App.Gtk4.desktop
 }
 
 sha512sums="
