community/vte3: split profile
Fixes: https://gitlab.alpinelinux.org/alpine/aports/-/issues/17004

--- a/community/vte3/APKBUILD
+++ b/community/vte3/APKBUILD
@@ -2,12 +2,13 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=vte3
 pkgver=0.80.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Virtual Terminal Emulator library"
 url="https://gitlab.gnome.org/GNOME/vte"
 arch="all"
 license="LGPL-2.0-or-later"
-subpackages="$pkgname-dbg $pkgname-dev $pkgname-gtk4 $pkgname-lang"
+subpackages="$pkgname-dbg $pkgname-dev $pkgname-gtk4 $pkgname-lang $pkgname-profile"
+depends="$pkgname-profile"
 makedepends="
 	bash
 	fast_float
@@ -52,11 +53,16 @@ package() {
 
 gtk4() {
 	pkgdesc="$pkgdesc (gtk4 component)"
+	depends="$pkgname-profile"
 
 	amove usr/bin/vte-*-gtk4
 	amove usr/lib/libvte-*-gtk4.so.*
 	amove usr/share/xdg-terminals/org.gnome.Vte.App.Gtk4.desktop
 	amove usr/share/applications/org.gnome.Vte.App.Gtk4.desktop
+}
+
+profile() {
+	amove etc/profile.d
 }
 
 sha512sums="
