community/helix: bump cc-rs
See: https://github.com/helix-editor/helix/issues/13155 alpine/aports!78019 (comment 471047)

--- a/community/helix/APKBUILD
+++ b/community/helix/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=helix
 pkgver=25.01.1
-pkgrel=0
+pkgrel=1
 pkgdesc="A post-modern modal text editor"
 url="https://helix-editor.com/"
 arch="all"
@@ -15,6 +15,7 @@ install="$pkgname.post-install"
 _tsrust_ver="0.21.2"
 source="https://github.com/helix-editor/helix/archive/$pkgver/helix-$pkgver.tar.gz
 	https://github.com/tree-sitter/tree-sitter-rust/archive/v$_tsrust_ver/tree-sitter-rust-$_tsrust_ver.tar.gz
+	bump-cc-rs.patch
 	"
 
 # Don't build tree-sitter languages, we provide them in standalone aports.
@@ -70,4 +71,5 @@ package() {
 sha512sums="
 1f4f63563f68595e69ab65f3204b4a39004133248896b14fe9cfbaf7ed3dce5281618fce35f81a470da54f453ffbf9316fde438544df110f8b4285b70bee767d  helix-25.01.1.tar.gz
 304b232683ded9973a94ec872401151a5900e3423c7bff966b3f5ec4a71122405fb3790f71f5fb445b8af72a31176349cb3ea8bc7d1b1a042ee574420472e19e  tree-sitter-rust-0.21.2.tar.gz
+93b99ab30b99e68c1bc85245e35a67ca24aae1669862e254e17d4b860a35b8f8bcc2856c937b56aa94e9c2366d042cfd07acc4723ff5755e2a2537ab9a6942ba  bump-cc-rs.patch
 "
