--- a/community/mercurial/APKBUILD
+++ b/community/mercurial/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mercurial
-pkgver=6.9.1
-pkgrel=1
+pkgver=6.9.4
+pkgrel=0
 pkgdesc="Scalable distributed SCM tool"
 url="https://www.mercurial-scm.org/"
 arch="all"
@@ -54,6 +54,8 @@ x86_64|armv7|armhf|aarch64|x86|ppc64le)
 esac
 
 # secfixes:
+#   6.9.4-r0:
+#     - CVE-2025-2361
 #   4.9-r0:
 #     - CVE-2019-3902
 
@@ -127,6 +129,6 @@ lang() {
 }
 
 sha512sums="
-8e04d84b17145de2659c0a1114dba1dfc291ce3742b7057db1004b63caf7922f5bac865908cbd0065b05722707705e1181963651a9a02f1ee80bb70bee408bad  mercurial-6.9.1.tar.gz
+4aa6881a9044c51a2d3d421da964d9e1bcc10d794a4a299a1f22cfb59866d168eb2d3a973cf2987d613e42c1a9b4cb5fbe79e1fa1b14a37e1747f4a4d1d5a0c7  mercurial-6.9.4.tar.gz
 b24e1b79ca36ac1d78a5af4e35eb87581f209255838327a7d9315c17175d41bfa4b7f98c66be078cfa1e7d27a41c1a12bba265fa6d3d30edb4e2ba599fe0ed18  blacklist.txt
 "
