community/py3-pecan: upgrade to 1.6.0
* https://github.com/pecan/pecan/blob/1.6.0/docs/source/changes.rst

--- a/community/py3-pecan/APKBUILD
+++ b/community/py3-pecan/APKBUILD
@@ -1,17 +1,18 @@
 # Contributor: Duncan Bellamy <dunk@denkimushi.com>
 # Maintainer: Duncan Bellamy <dunk@denkimushi.com>
 pkgname=py3-pecan
-pkgver=1.5.1
-pkgrel=1
+pkgver=1.6.0
+pkgrel=0
 pkgdesc="WSGI object-dispatching web framework, designed to be lean and fast, with few dependencies"
 url="https://github.com/pecan/pecan"
 arch="noarch"
 license="BSD-3-Clause"
-depends="py3-logutils py3-mako py3-setuptools py3-webob"
+depends="py3-mako py3-setuptools py3-webob"
 makedepends="py3-gpep517 py3-wheel"
 checkdepends="py3-pytest py3-sqlalchemy py3-webtest"
 subpackages="$pkgname-pyc"
-source="$pkgname-$pkgver.tar.gz::https://files.pythonhosted.org/packages/source/p/pecan/pecan-$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://files.pythonhosted.org/packages/source/p/pecan/pecan-$pkgver.tar.gz
+	ext.patch"
 builddir="$srcdir/pecan-$pkgver"
 
 build() {
@@ -34,5 +35,6 @@ package() {
 }
 
 sha512sums="
-87fff8657268accda3a53f156338332e3d23df8055cc62d77d9f1641f692c1d7e4013f564b0108541e5df69e1d3d2c8e3df87486e0b4316e437f67d010013fa9  py3-pecan-1.5.1.tar.gz
+f10878fb219086cc34109e9c4b1ce201da28c648120affbb890579e2d8f4d18231c5784ede6c465738aa2066fc54fecade41d2d4681ed1b6f376d0912afc60b4  py3-pecan-1.6.0.tar.gz
+4e311be1b773dedda56ca69be0bb228271df16e77297e6c69892a621304e5e61d53f63e0ff061ca61e332cd9dd058bf2106d8c371471059d046da2b9532bbbba  ext.patch
 "
