main/linux-lts: bump NR_CPUS for armv7 to 32
The default is 4 cores, which is less than some consumer-available hardware
(Exynos 5422 has 8 cores for example). 32 should be a pretty good number, it's
the same that linux-edge uses.

--- a/main/linux-lts/lts.armv7.config
+++ b/main/linux-lts/lts.armv7.config
@@ -69,6 +69,7 @@ CONFIG_ARM_ERRATA_825619=y
 CONFIG_ARM_ERRATA_852421=y
 CONFIG_ARM_ERRATA_852423=y
 CONFIG_SMP=y
+CONFIG_NR_CPUS=32
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
 CONFIG_VMSPLIT_2G=y
