--- a/community/chromium/APKBUILD
+++ b/community/chromium/APKBUILD
@@ -3,9 +3,9 @@
 # Contributor: Elly Fong-Jones <elly@elly.town>
 # Maintainer: lauren n. liberda <lauren@selfisekai.rocks>
 pkgname=chromium
-pkgver=135.0.7049.95
+pkgver=136.0.7103.113
 pkgrel=0
-_copium_tag=135.0
+_copium_tag=136.1
 # DEPS file -> deps['src/third_party/test_fonts']['objects'][0]['object_name']
 # (for the given version, when it changes)
 _testfonts=336e775eec536b2d785cc80eff6ac39051931286
@@ -25,6 +25,7 @@ depends="
 	so:libudev.so.1
 	xdg-utils
 	"
+_llvmver=19
 makedepends="
 	alsa-lib-dev
 	bash
@@ -99,7 +100,6 @@ makedepends="
 	rust
 	rust-bindgen
 	samurai
-	simdutf-dev
 	snappy-dev
 	speex-dev
 	spirv-tools-dev
@@ -150,10 +150,9 @@ _copium_patches="
 	cr133-ffmpeg-no-noh264parse.patch
 	cr133-is-musl-libcxx.patch
 	cr134-no-exec_script_allowlist.patch
-	cr134-unbundle-simdutf.patch
-	cr135-musl-libcxx-strtoll_l.patch
 	cr135-mv2-still-not-dead.patch
-	cr135-unbundle-simdutf-v8-fix.patch
+	cr136-gpery-3.2-fallthrough.patch
+	cr136-node-version-check.patch
 	"
 # chrome-sandbox can use suid when user namespaces aren't available, but uses only userns and drops privileges normally
 options="suid"
@@ -536,6 +535,7 @@ prepare() {
 	# libaom - https://aomedia.googlesource.com/aom/+/706ee36dcc82%5E%21/
 	#   but watch this space: https://aomedia-review.googlesource.com/c/aom/+/188606
 	# jsoncpp, re2, snappy, swiftshader-*, woff2 - requires use_custom_libcxx=false
+	# simdutf - requires atomic function variants (introduced in 7.0.0)
 	local use_system="
 		brotli
 		crc32c
@@ -556,7 +556,6 @@ prepare() {
 		libxslt
 		openh264
 		opus
-		simdutf
 		zlib
 		zstd
 		"
@@ -664,21 +663,20 @@ _configure() {
 		;;
 	esac
 
-	# this follows compiler-rt, not clang or llvm package
-	_llvmver=19
-
 	# added_rust_stdlib_libs and removed_rust_stdlib_libs workaround change in Rust 1.86,
 	# feel free to remove after upgrading rust
 
 	# shellcheck disable=2089
 	local gn_config="
 		added_rust_stdlib_libs=[\"adler\"]
+		arm_use_neon=false
 		blink_enable_generated_code_formatting=false
 		cc_wrapper=\"$cc_wrapper\"
 		chrome_pgo_phase=0
 		clang_base_path=\"/usr/lib/llvm$_llvmver\"
 		clang_use_chrome_plugins=false
 		clang_version=\"$_llvmver\"
+		clang_warning_suppression_file=\"\"
 		custom_toolchain=\"//build/toolchain/linux/unbundle:default\"
 		disable_fieldtrial_testing_config=true
 		enable_hangout_services_extension=true
@@ -702,6 +700,7 @@ _configure() {
 		is_official_build=true
 		link_pulseaudio=true
 		moc_qt5_path=\"/usr/lib/qt5/bin\"
+		node_version_check=false
 		proprietary_codecs=true
 		removed_rust_stdlib_libs=[\"adler2\"]
 		rtc_link_pipewire=true
@@ -900,15 +899,15 @@ swiftshader() {
 }
 
 sha512sums="
-c2c379c668a49d69b2aa6491fa29f369caccc6de816ef2bc770b0f87337cbaf0221d8ad8302b0a2bc31dccca27715f48830e131baf384475aad26f549514fde2  chromium-135.0.7049.95.tar.xz
-99ad2400a94ecbcb28d4620b3e69ee88fec5c8ab9f1d33fee69efa519bcd8e891db48bb7a2664f11532fff51f307666ad659927afe589e336535f99a2c16a068  chromium-135.0.7049.95-testdata.tar.xz
+4a946b0d99ca6ccf7035877dbf3e2de28fe7f30960362a3886faa93d86cc84150a43b27feb512ce4aef8d9533bdbe26dd9788666d4822ee1e2053c1269c441fe  chromium-136.0.7103.113.tar.xz
+5eedfa17054056d5f7110bb7becd4ca77dc73ab2bcc0b722dbb591acbe15d6e569f26c988c59661763a1b239e9a18955975fbae4d172536f42e081674fdbb8d6  chromium-136.0.7103.113-testdata.tar.xz
 bbc928e99ebcd4d953b982688b01526cb754bad018f67be9e777a4f8ac51cdd3e01374e5a63faf55b12e7cee0d52816c88062e012b5bcc4f9bb41f28d8e0b7f7  test_fonts-336e775eec536b2d785cc80eff6ac39051931286.tar.gz
-47d0fc8e974f002965592b352ce268cf64c5d302829b35577545e3a1041651d4f669908c7ace55c6c128c179ff4b74bb936598d2c5759ee95468f4657fd7abcd  copium-135.0.tar.gz
+f098b4f6878de1cae1ca0308af8dfc539e182e06b9885f77ded0c987fdd0f2a1fdaae3dce2b3bb80b279f7b94008305005f74fce06cab1549513549cba6b545c  copium-136.1.tar.gz
 1b16564f85a03f3eb934ec51289dc6159e2454202d40f48354f947d6ceffac8889e9eb4c0f4dfaafb3a15101566d54039f832bc9a8433c3c463e2d1dac2d2acc  chromium-launcher.sh
 9cfcb41d69c5a515b6f9fe2a629579fa499e1f48eb58a0ce4ec8e5029d450bcafb6d963019aaac9a6838244bee9f9ba7fe5ef6146a0ca6b20fcda4ab7f059476  chromium.conf
 2d8237a940ea691bd10b08315429677a587f7ef9692a0cca53bfd066eae82998a6c71f402a8669e9de39f94d7f3280745d1628ea6eac5d76ca7116844d4e0dac  google-api.keys
 29bb685e03356a77df5fd347cdf55194cc8b3265c421cc76e54d64edefc329dbcb052deb26b22e8f587ce68456876c071de1b7d258dd0fcc6ee66c875ec4a020  chromium-revert-drop-of-system-java.patch
-6ab8a945f581bf990f93b23d83aca94c5f40d4f91270ef8e65acd4b19bbc47437d8081eac0e27243425cdd87044d6b176ae6bafefe02a53a64b8ecee3f44a92b  compiler.patch
+2332a651b0600c81ebe2b90f92df23595f83d6b7cae9caab5f55a08a8d5ea490572b314da95a0d6ff8fdcccea86970e829ad32f84938719c3ac90bec91d03aba  compiler.patch
 4057cc78f10bfd64092bc35a373869abb1d68b880cdbca70422f39ffd78a929c19c7728d4d4c40709aaba25581148a93ae5343e724849fd35323062ed68753fa  disable-dns_config_service.patch
 2470904846e3adde2c9506f9e78220daca0932320b628dd3d427bf2b7c17a8f7880cb97e787b046c28de7aca642e1a8d30824d6049905976da77e7473baa64da  disable-failing-tests.patch
 5fc5c012c1db6cf1ba82f38c6f3f4f5ca3a209e47ac708a74de379b018e0649b7694877c9571ef79002dde875ffc07b458a3355425f1c01867f362c66c2bc1bf  fc-cache-version.patch
@@ -923,7 +922,7 @@ a250cff50d282b02ce0f28880d0a2b4fb8e7df51bc072bfeeddc561c29a7c76453dbcbc7b17b8296
 0b41aeb6b212f9c3f61aa0a8d3085c9e865a2e68f3270ceec2376aab67f337ac46eaea7da36d3fd7219e2a1cb731b7aa2d3fb619a374d2b7653976b9f4f384bb  no-mallinfo.patch
 e4c4e5bc6f828f9c883dd418c0ba01887949c29c311f76206a1ec29f620b0c0ba0452949dc2778a9c46ea066405857536964a36436a68eecf7da7952736333cf  no-res-ninit-nclose.patch
 6dc4d8dc92e685dace62265a1ddb3aebc558aed54d20ff6d36b030be0c48d7e84662326c31363612492574d9a03c62653cdc21a60995b97dee1d75cae86a9f9b  no-sandbox-settls.patch
-f2b08538ff57c50b3772a07ca91845f9d45f4a5112f608b6192d4fb5d7be48f478c0c36194d95ab7bbf933e0278e5c6d578619d8643895cdc40386eebc5b975f  partalloc-no-tagging-arm64.patch
+b75908a45ee2f4f806eec8d86fca2f51fda3531b88de48ef4539c364a40d7e2897cdaf38b715682d712648e3f43aac983055e688385f85fa7b7204ffb6d617e1  partalloc-no-tagging-arm64.patch
 03f829a2da633533ef3fd0f287f5ec602d936a97a98b53cd2415553c2537ae9d571f35397ca7c9fb3f4b0806c300e3b189569f8d979ca132e1a2a4dae7206396  pvalloc.patch
 e48693e6b7aeebf69a5acbf80d9a35defe4c23835121dfeb58b051ac7c527e758a41004f4d193274fe1b01c0bfb1dbc77b09cb6a404a3fdee507a2918afb0edb  temp-failure-retry.patch
 "
