community/feedbackd-device-themes: upgrade to 0.8.0, switch to noarch, fix maintainer comment
https://source.puri.sm/Librem5/feedbackd-device-themes/-/releases/v0.8.0

--- a/community/feedbackd-device-themes/APKBUILD
+++ b/community/feedbackd-device-themes/APKBUILD
@@ -1,11 +1,11 @@
-# Maintainer: Dylan Van Assche <me@dylanvanassche.be>
-# Contributor: team/phosh <me@dylanvanassche.be>
+# Contributor: Dylan Van Assche <me@dylanvanassche.be>
+# Maintainer: team/phosh <me@dylanvanassche.be>
 pkgname=feedbackd-device-themes
 pkgver=0.8.0
 pkgrel=0
 pkgdesc="Feedbackd device themes for different devices"
 url="https://source.puri.sm/Librem5/feedbackd-device-themes"
-arch="all"
+arch="noarch"
 license="GPL-3.0-or-later"
 makedepends="meson json-glib-dev"
 source="https://sources.phosh.mobi/releases/feedbackd-device-themes/feedbackd-device-themes-$pkgver.tar.xz"
