--- a/main/alsa-ucm-conf/APKBUILD
+++ b/main/alsa-ucm-conf/APKBUILD
@@ -2,12 +2,16 @@
 # Maintainer: Minecrell <minecrell@minecrell.net>
 pkgname=alsa-ucm-conf
 pkgver=1.2.13
-pkgrel=0
+pkgrel=1
 pkgdesc="ALSA Use Case Manager configuration"
 url="https://alsa-project.org"
 arch="noarch"
 license="BSD-3-Clause"
-source="https://alsa-project.org/files/pub/lib/alsa-ucm-conf-$pkgver.tar.bz2"
+source="
+	https://alsa-project.org/files/pub/lib/alsa-ucm-conf-$pkgver.tar.bz2
+	fix-empty-product_name.patch
+	fix-handling-of-empty-sys-vendor.patch
+	"
 options="!check" # no tests
 provider_priority=10
 # replaced files from downstream pmos
@@ -21,4 +25,6 @@ package() {
 
 sha512sums="
 cad867268851ac178f3a5378a00e292184b0e0ec7955f297ae7ed56073d3dddb06c08666b23b1bf6b0065068a9370ee34608bd687763658c79d34b64059b1c85  alsa-ucm-conf-1.2.13.tar.bz2
+6934a496cff994a410e9a44810be71a9dff3a03021569899064c984f64b228ae8099281eb8bbf844548593d25dc9b3edf6879bdfa7f55eb4ecb6128ab25969c2  fix-empty-product_name.patch
+a3d94d6c1bbe8da3d186463722d53f3280590897268672513c43c3d7edfa484ac28d6fc1060bcc179663873ca4eb8353cd80f11097e9b834e14b8df7a5736ae0  fix-handling-of-empty-sys-vendor.patch
 "
