main/mpfr4: fix patch URLs returning 404 on outdated versions
"mpfr-current" points to the latest release, making all patch URLs invalid
the moment a new release is cut; however, all versions also have a separate page
where the patches should be available indefinitely

--- a/main/mpfr4/APKBUILD
+++ b/main/mpfr4/APKBUILD
@@ -26,7 +26,7 @@ _i=1
 while [ $_i -le ${pkgver##*_p} ]; do
 	[ $_i -lt 10 ] && _pad="0" || _pad=
 	source="$source
-		mpfr-$_pkgver-patch$_pad$_i.patch::https://www.mpfr.org/mpfr-current/patch$_pad$_i
+		mpfr-$_pkgver-patch$_pad$_i.patch::https://www.mpfr.org/mpfr-$_pkgver/patch$_pad$_i
 		"
 	_i=$(( _i + 1))
 done
