main/py3-pygments: fix install with latest setuptools

--- a/main/py3-pygments/APKBUILD
+++ b/main/py3-pygments/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Julien Voisin <julien.voisin@dustri.org>
 pkgname=py3-pygments
 pkgver=2.19.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Syntax highlighting package written in Python"
 url="https://pygments.org/"
 arch="noarch"
@@ -38,7 +38,7 @@ check() {
 
 package() {
 	python3 -m installer -d "$pkgdir" \
-		.dist/Pygments*.whl
+		.dist/pygments*.whl
 
 	mkdir -p "$pkgdir"/usr/bin
 	ln -s pygmentize "$pkgdir"/usr/bin/pygmentize-3
