testing/hurl: upgrade to 6.1.0

--- a/testing/hurl/APKBUILD
+++ b/testing/hurl/APKBUILD
@@ -1,6 +1,6 @@
-# Maintainer: Hoang Nguyen <folliekazetani@protonmail.com>
+maintainer="Hoang Nguyen <folliekazetani@protonmail.com>"
 pkgname=hurl
-pkgver=6.0.0
+pkgver=6.1.0
 pkgrel=0
 pkgdesc="CLI to run HTTP requests defined in simple plain text format"
 url="https://hurl.dev/"
@@ -47,5 +47,5 @@ hurlfmt() {
 }
 
 sha512sums="
-f7fb134fbcc5fa96e4ed7af91d16ddbcc593b4737cb81ca3ef08b86be6a01b93d685868531e7cf79489c3bd0534c58dd7c5795cee6e2565abdac1d90158cb8ce  hurl-6.0.0.tar.gz
+15bccdf1d0f5116f054caf88a6033fb087370779c397c87f00ed76f5eb4d1b3cbd751ee5aaa3aa26d08bc4582dbe91aa9b5ec0b3241285c3444403250d2dba43  hurl-6.1.0.tar.gz
 "
