community/squashfuse: upgrade to 0.6.0

--- a/community/squashfuse/APKBUILD
+++ b/community/squashfuse/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Anders Björklund <anders.f.bjorklund@gmail.com>
-# Maintainer: Hoang Nguyen <folliekazetani@protonmail.com>
+maintainer="Hoang Nguyen <folliekazetani@protonmail.com>"
 pkgname=squashfuse
-pkgver=0.5.2
+pkgver=0.6.0
 pkgrel=0
 pkgdesc="FUSE filesystem to mount squashfs archives"
 url="https://github.com/vasi/squashfuse"
@@ -47,5 +47,5 @@ package() {
 }
 
 sha512sums="
-c13394df5a10d4121b5ee56485661b13ba03975ede25210444ed5badce97a3a25c599919bf0bcb683fb7391c19a9a8d989faf128466d8deae8b9c63f5dd4f941  squashfuse-0.5.2.tar.gz
+5b6f76aeab38c30a470a7bbd14a0029bbe6b1cff9c72a5c3adcb96cc32edaf278b4622d658b5510611d8a1f76d790dd5396fe1fa9fe3908e6919527439cc94cf  squashfuse-0.6.0.tar.gz
 "
