testing/kubectl-krew: upgrade to 0.4.5

--- a/testing/kubectl-krew/APKBUILD
+++ b/testing/kubectl-krew/APKBUILD
@@ -1,7 +1,7 @@
-# Maintainer: Hoang Nguyen <folliekazetani@protonmail.com>
+maintainer="Hoang Nguyen <folliekazetani@protonmail.com>"
 pkgname=kubectl-krew
-pkgver=0.4.4
-pkgrel=10
+pkgver=0.4.5
+pkgrel=0
 pkgdesc="Find and install kubectl plugins"
 url="https://krew.sigs.k8s.io/"
 arch="all !armhf !riscv64 !loongarch64" # kubectl
@@ -37,6 +37,6 @@ package() {
 }
 
 sha512sums="
-888362c564500d3f9f00b3207f5d63ee6546f9da6c884736fa55d49e78b91d5085a518f69f41b156cc8dc13667846be98bc2459392ca3d970c89721b6f4b632b  kubectl-krew-0.4.4.tar.gz
+afce7b8a68bd535b4c1149db4ebf41b1995e8203b9d8ffb15db5e501492ebb45e8683f400c9d2f54f63b76a9427e17b6d231f35a4c9009f6dfffd5e3082abd16  kubectl-krew-0.4.5.tar.gz
 797a0f1361d893289217569e09dd5564fe545eaf2f0b3dc40367c63cb124b8120c5600d190732ced7885a020ae56a9417b49bccb8bca2c87faf72bf3e1359a81  test-use-testing-tmpdir.patch
 "
