community/git-annex: upgrade to 10.20250320

--- a/community/git-annex/APKBUILD
+++ b/community/git-annex/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Antoine Martin (ayakael) <dev@ayakael.net>
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=git-annex
-pkgver=10.20250115
+pkgver=10.20250320
 pkgrel=0
 pkgdesc="Manage files with git, without checking their contents into git"
 url="http://git-annex.branchable.com"
@@ -34,6 +34,8 @@ source="
 	fix-makefile.patch
 	ghc-9.8.patch
 	wai-extra-downgrade-3.1.16.patch
+	git-annex.desktop
+	git-annex-autostart.desktop
 	"
 subpackages="$pkgname-doc $pkgname-bash-completion $pkgname-fish-completion $pkgname-zsh-completion"
 
@@ -61,9 +63,6 @@ prepare() {
 }
 
 build() {
-	# ghc version path
-	export PATH="$PATH:/usr/lib/llvm15/bin"
-
 	cabal v2-update
 	cabal v2-build git-annex:exes \
 		--jobs=${JOBS:-1} \
@@ -73,7 +72,7 @@ build() {
 		--flags="$_feature_flags"
 
 	# Avoid invoking ghc(1) in install() function.
- 	make mans Build/InstallDesktopFile
+ 	make mans
 
 	# Prepare executable for the tests and make install.
 	local executable="$(cabal list-bin git-annex:exes)"
@@ -88,12 +87,19 @@ check() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+
+	install -Dm644 "$srcdir"/git-annex.desktop "$pkgdir"/usr/share/applications/git-annex.desktop
+	install -Dm644 "$srcdir"/git-annex-autostart.desktop "$pkgdir"/etc/xdg/autostart/git-annex.desktop
+	install -Dm644 "$builddir"/doc/logo.svg "$pkgdir"/usr/share/icons/hicolor/scalable/apps/git-annex.svg
+	install -Dm644 "$builddir"/doc/logo_16x16.png  "$pkgdir"/usr/share/icons/hicolor/16x16/apps/git-annex.png
 }
 
 sha512sums="
-3ef650863edaedf7c853ad72a2bd9496a3459b5fbb0a74fa1189b17ba7d02ce08fc339569e079d0147171edc859b27ea9740c6ce69a3d6ae8f66cec59bace9fb  git-annex-10.20250115.tar.gz
-86f3aa57db4c7e25765b8ec7abc1c3f84efe22fed4404e2d9ce699ef61c77e67b58da7c1a334e1874601c76351ef322d0aa8ef0b865dd9a626d0b1d5142ebbaa  git-annex-10.20250115-edge.cabal
-b24201f6d2d1532e65881be41cf6ece071a5d53ea14ad8754e6344ef8168dfccb01db0be02dcd57a002fe5d5dde13898b2b063432d5fe965ec72e7d7066e9d75  fix-makefile.patch
+a9bbc2d33d765350f96385376db3b85830bb1ed8c9cc771d4e288d23af12babf00f12b805fb3f891ed4ce212fdf5cb642a579eb1a08c41d6e47b42093a170722  git-annex-10.20250320.tar.gz
+9436cbd13300d92c1324ae8320e260025d895e9150c5696401631d8699cbadf0804ef02b6d299c1b97f1f30e55072538939c6a29150a0c37f2a44c6dd8165ec7  git-annex-10.20250320-edge.cabal
+0ec1e99dd4abba94dfa0ab707731dca0de6e4fe73e3ecb10db8dec315db1dabfcb978f14c4d17fdfa66d5a89515e9dc41e1daf4206cb94c3731e9c24a95e80f5  fix-makefile.patch
 05b2f7248ebe3244e7a89a889bc6b6acf91114aa72b8b8e63c742483f7bd94e2ba8b16e917a091954893ba57a6ab0b0a9ccc23c219f2fd626d78d06b9fa106f1  ghc-9.8.patch
 81b67fc0c4eb44bf045ef472ccbb41efbf3fae2eb983ccf2a9776cb97862d09f507e0c67030371345107f63b57b99481ae52f9b88d6a52fd6518cd05f54498b0  wai-extra-downgrade-3.1.16.patch
+1c16197c00a6fd8dcdc3e1ddc8ac3b874301d435b3cde68cb28b3122443da2c511ca05d4ac23fe20ae16a3544e4b3dae154aece49164b28989aeafe473903919  git-annex.desktop
+fc1326dcadffdc70d8a2d19b9f4892e0ee58ca46cac30a8553750504402d695602c466aae38bf6c04b9f63a212fc6eb58096176c7cdb33920fa3c8e610aa112c  git-annex-autostart.desktop
 "
