community/py3-kombu: upgrade to 5.5.0

--- a/community/py3-kombu/APKBUILD
+++ b/community/py3-kombu/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Stefan Wagner <stw@bit-strickerei.de>
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=py3-kombu
-pkgver=5.4.2
+pkgver=5.5.0
 pkgrel=0
 pkgdesc="a message queue abstraction layer"
 url="https://pypi.org/project/kombu/"
@@ -9,7 +9,7 @@ arch="noarch !s390x" # missing py3-amqp depend
 license="BSD-3-Clause"
 depends="py3-amqp py3-vine"
 makedepends="py3-setuptools py3-gpep517 py3-wheel"
-checkdepends="py3-pyro4 py3-case py3-nose py3-mock py3-tz py3-tzdata py3-pytest py3-sqlalchemy py3-fakeredis py3-botocore py3-hypothesis"
+checkdepends="py3-pyro4 py3-case py3-nose py3-mock py3-tz py3-tzdata py3-pytest py3-sqlalchemy py3-fakeredis py3-botocore py3-hypothesis py3-sniffio py3-google-api-python-client py3-googleapis-common-protos"
 subpackages="$pkgname-pyc"
 source="https://files.pythonhosted.org/packages/source/k/kombu/kombu-$pkgver.tar.gz"
 builddir="$srcdir/kombu-$pkgver"
@@ -24,11 +24,13 @@ build() {
 }
 
 # t/unit/transport/test_azurestoragesqueues.py: needs py3-azure
+# t/unit/transport/test_gcpubsub.py: needs py3-google-cloud-pubsub
 check() {
 	python3 -m venv --clear --without-pip --system-site-packages .testenv
 	.testenv/bin/python3 -m installer "$builddir"/.dist/*.whl
 	.testenv/bin/python3 -m pytest -v \
-		--ignore="t/unit/transport/test_azurestoragequeues.py"
+		--ignore="t/unit/transport/test_azurestoragequeues.py" \
+		--ignore="t/unit/transport/test_gcpubsub.py"
 }
 
 package() {
@@ -37,5 +39,5 @@ package() {
 }
 
 sha512sums="
-4224412b8d3ee867af03a1771326681f78d112f31ab7ecd7c0f648bd28e834b296c1b36b7720351ec8e0ba871153caaa6aa06961394c5a9e99cd68291ad20b9b  kombu-5.4.2.tar.gz
+25d5c3b168c31a1de97188be0f55c6df858533e36040d64363de2edeb8562c019a249e8b608b192ac2482ce7d73fd48838e5890f78c488c30b2d9626c8352b7e  kombu-5.5.0.tar.gz
 "
