community/py3-xmlsec: upgrade to 1.3.15
Python 3.13 support

--- a/community/py3-xmlsec/APKBUILD
+++ b/community/py3-xmlsec/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=py3-xmlsec
 _pkgreal=xmlsec
-pkgver=1.3.14
-pkgrel=1
+pkgver=1.3.15
+pkgrel=0
 arch="all"
 pkgdesc="Python bindings for the XML Security Library"
 url="https://pypi.python.org/project/xmlsec"
@@ -23,8 +23,7 @@ makedepends="
 	xmlsec-dev
 	"
 checkdepends="py3-pytest"
-source="$pkgname-$pkgver.tar.gz::https://pypi.io/packages/source/x/xmlsec/xmlsec-$pkgver.tar.gz
-	incompatible-pointer-types.patch"
+source="$pkgname-$pkgver.tar.gz::https://pypi.io/packages/source/x/xmlsec/xmlsec-$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgreal-$pkgver
 
 build() {
@@ -44,6 +43,5 @@ package() {
 		.dist/*.whl
 }
 sha512sums="
-7ac5b3f1d983662153393ac06be606ade2e8043fc1be85db08ab1920cf30a7668d9a33d9b9e219f8ab9816a82ba35b3dd022175f0cc68c8792a61098566fc4c4  py3-xmlsec-1.3.14.tar.gz
-c8ad084a8c073d5ae8e16ad089061d65bef8924cf80a538647bf5bcd4bdba695d5bb170ef2d6cdfa4e7e00d9a0a43002a3f5597fc6b01debe21c35191a4cbe8b  incompatible-pointer-types.patch
+425387414bdeb8b530ea376941c703ff0bd34eade3be6187f2fa86b4a0a64314f7641cd074c178c04cb7fb68de6ac84450ed905bad40ad6506bff35860b916d0  py3-xmlsec-1.3.15.tar.gz
 "
