main/rust: allow net access in rootbld
needed for some crates:
```
    Finished `release` profile [optimized] target(s) in 0.46s
Dist clippy-1.85.1-x86_64-alpine-linux-musl
	finished in 0.468 seconds
Skipping RustDev (x86_64-alpine-linux-musl): external LLVM
Dist extended stage1 (x86_64-alpine-linux-musl)
Dist rust-1.85.1-x86_64-alpine-linux-musl
	finished in 11.628 seconds
STDERR:
    Updating crates.io index
warning: spurious network error (3 tries remaining): [6] Could not resolve hostname (Could not resolve host: index.crates.io)
warning: spurious network error (2 tries remaining): [6] Could not resolve hostname (Could not resolve host: index.crates.io)
warning: spurious network error (1 tries remaining): [6] Could not resolve hostname (Could not resolve host: index.crates.io)
error: failed to sync

Caused by:
  failed to load pkg lockfile

Caused by:
  failed to get `unicode-ident` as a dependency of package `build-rs v0.3.0 (/tmp/src/rustc-1.85.1-src/src/tools/cargo/crates/build-rs)`

Caused by:
  download of config.json failed

Caused by:
  failed to download from `https://index.crates.io/config.json`

Caused by:
  [6] Could not resolve hostname (Could not resolve host: index.crates.io)

Command cd "/tmp/src/rustc-1.85.1-src/build/tmp/tarball/rustc/src/image" && RUSTC_BOOTSTRAP="1" "/usr/bin/cargo" "vendor" "--versioned-dirs" "--sync" "/tmp/src/rustc-1.85.1-src/src/tools/cargo/Cargo.toml" "--sync" "/tmp/src/rustc-1.85.1-src/src/tools/rust-analyzer/Cargo.toml" "--sync" "/tmp/src/rustc-1.85.1-src/compiler/rustc_codegen_cranelift/Cargo.toml" "--sync" "/tmp/src/rustc-1.85.1-src/compiler/rustc_codegen_gcc/Cargo.toml" "--sync" "/tmp/src/rustc-1.85.1-src/library/Cargo.toml" "--sync" "/tmp/src/rustc-1.85.1-src/src/bootstrap/Cargo.toml" "--sync" "/tmp/src/rustc-1.85.1-src/src/tools/rustbook/Cargo.toml" "--sync" "/tmp/src/rustc-1.85.1-src/src/tools/rustc-perf/Cargo.toml" "--sync" "/tmp/src/rustc-1.85.1-src/src/tools/opt-dist/Cargo.toml" "--sync" "/tmp/src/rustc-1.85.1-

--- a/main/rust/APKBUILD
+++ b/main/rust/APKBUILD
@@ -60,8 +60,9 @@ makedepends_host="
 # to makedepends would not work, because abuild implicitly removes $pkgname
 # and $subpackages from the abuild's dependencies.
 provides="rust-bootstrap=$pkgver-r$pkgrel"
-# This is needed for -src that contains some testing binaries.
-options="!archcheck"
+# !archcheck: needed for -src that contains some testing binaries.
+# net: crates from crate.io
+options="!archcheck net"
 
 case "$CARCH" in
 arm*)
