testing/niri: fix wayland-sessions launcher
see more info in the patch text itself

--- a/testing/niri/APKBUILD
+++ b/testing/niri/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Pedro Lucas Porcellis <porcellis@eletrotupi.com>
 pkgname=niri
 pkgver=25.02
-pkgrel=1
+pkgrel=2
 pkgdesc="A scrollable-tiling Wayland compositor"
 url="https://github.com/YaLTeR/niri"
 arch="x86_64 ppc64le aarch64"
@@ -26,7 +26,9 @@ makedepends="
 subpackages="
 	$pkgname-portalsconf
 	"
-source="$pkgname-$pkgver.tar.gz::https://github.com/YaLTeR/niri/archive/refs/tags/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/YaLTeR/niri/archive/refs/tags/v$pkgver.tar.gz
+	niri-session.patch
+	"
 options="net" # rust crates
 
 build() {
@@ -60,4 +62,5 @@ portalsconf() {
 
 sha512sums="
 1ed4061cf6267c32a035604314f6c324f3002891ef14bbec5bfdb8b980cab5d2ef94b856cd651d7ebb99e249158be5849c66f661ab731ac6f0c25f2eda8a3745  niri-25.02.tar.gz
+f488ed2f316e96902c737a1104c425f2281349d519825c02a39205957ee65607730a69b4857d5a5803f43b74180ab4efef7fcb4eb8bfb75e042d09a3e22d1dff  niri-session.patch
 "
