testing/efl: restrict the build a bit less
enable drm, support heif and do not remove pulseaudio support

--- a/testing/efl/APKBUILD
+++ b/testing/efl/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Boris Faure <boris@fau.re>
 pkgname=efl
 pkgver=1.28.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Enlightenment Foundation Libraries"
 url="https://www.enlightenment.org"
 arch="all"
@@ -51,28 +51,27 @@ build() {
 	CFLAGS="$CFLAGS -D_LARGEFILE64_SOURCE -D__USE_MISC" \
 	abuild-meson \
 		-Db_lto=true \
-		 -Ddebug=false \
-		 -Doptimization=s \
-		 -Dnls=false \
-		 -Dopengl=es-egl \
-		 -Dxinput22=true \
-		 -Dbuffer=false \
-		 -Dfb=false \
-		 -Ddrm=false \
-		 -Dtslib=false \
-		 -Dharfbuzz=true \
-		 -Dwl=true \
-		 -Dnetwork-backend=connman \
-		 -Devas-loaders-disabler=pdf,ps,raw,tiff,json,avif,jxl \
-		 -Dphysics=false \
-		 -Dsystemd=false \
-		 -Dpulseaudio=false \
-		 -Davahi=false \
-		 -Dbindings= \
-		 -Dbuild-examples=false \
-		 -Dbuild-tests=false \
-		 -Decore-imf-loaders-disabler=ibus,scim \
-		 . build
+		-Ddebug=false \
+		-Doptimization=s \
+		-Dnls=false \
+		-Dopengl=es-egl \
+		-Dxinput22=true \
+		-Dbuffer=false \
+		-Dfb=false \
+		-Ddrm=true \
+		-Dtslib=false \
+		-Dharfbuzz=true \
+		-Dwl=true \
+		-Dnetwork-backend=connman \
+		-Devas-loaders-disabler=pdf,ps,heif,raw,tiff,json,avif,jxl \
+		-Dphysics=false \
+		-Dsystemd=false \
+		-Davahi=false \
+		-Dbindings= \
+		-Dbuild-examples=false \
+		-Dbuild-tests=false \
+		-Decore-imf-loaders-disabler=ibus,scim \
+		. build
 
 	 meson compile -C build
 }
