community/py3-pebble: upgrade to 5.1.1

--- a/community/py3-pebble/APKBUILD
+++ b/community/py3-pebble/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=py3-pebble
-pkgver=5.1.0
+pkgver=5.1.1
 pkgrel=0
 pkgdesc="Multi threading and processing eye-candy"
 url="https://github.com/noxdafox/pebble"
@@ -23,6 +23,8 @@ case "$CARCH" in
 	# Tests timeout in CI
 	ppc64le) options="$options !check" ;;
 	riscv64) options="$options !check" ;;
+	# Some tests fail on s390x, but it otherwise appears to work.
+	s390x)   options="$options !check" ;;
 esac
 
 build() {
@@ -43,5 +45,5 @@ package() {
 }
 
 sha512sums="
-e63151950620eb942ea75eb4a55e108a041bf109ea523b3748834b5ce149e98ce2c2e9d87871cefb295d6746968dba9851bae5c3defd5c6bd4b3ba1c403252cb  py3-pebble-5.1.0.tar.gz
+67093980e19e8c36c5c665c9a686fb91a91743fce5f7a134d110bfc9e88268e3cfffa5adbd3427b9a2c41dc370f10fc9b05813185b3b7e59042659a2d2ed7d47  py3-pebble-5.1.1.tar.gz
 "
