main/lld19: rename from lld

--- a/main/lld19/APKBUILD
+++ b/main/lld19/APKBUILD
@@ -2,18 +2,17 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
-pkgname=lld
 pkgver=19.1.7
 pkgrel=1
 _llvmver=${pkgver%%.*}
-provides="lld$_llvmver=$pkgver-r$pkgrel"
+pkgname=lld$_llvmver
 pkgdesc="The LLVM Linker"
 url="https://llvm.org/"
 arch="all"
 license="Apache-2.0"
 depends_dev="$pkgname=$pkgver-r$pkgrel"
 makedepends="
-	clang
+	clang$_llvmver
 	cmake
 	compiler-rt
 	libedit-dev
@@ -25,7 +24,7 @@ makedepends="
 	llvm-libunwind-dev
 	patchelf
 	samurai
-	scudo-malloc~$_llvmver
+	scudo-malloc
 	zlib-dev
 	"
 checkdepends="gtest-dev bash llvm$_llvmver-test-utils"
@@ -33,7 +32,15 @@ subpackages="$pkgname-dbg $pkgname-libs $pkgname-dev $pkgname-doc"
 source="https://github.com/llvm/llvm-project/releases/download/llvmorg-${pkgver//_/-}/lld-${pkgver//_/}.src.tar.xz
 	https://github.com/llvm/llvm-project/releases/download/llvmorg-${pkgver//_/-}/cmake-${pkgver//_/}.src.tar.xz
 	"
-builddir="$srcdir/$pkgname-${pkgver//_/}.src"
+builddir="$srcdir/lld-${pkgver//_/}.src"
+
+# whether this is the default lld version (keep in sync with llvm)
+_default_lld="yes"
+
+if [ "$_default_lld" = yes ]; then
+	provides="lld=$pkgver-r$pkgrel"
+	replaces="lld"
+fi
 
 prepare() {
 	default_prepare
@@ -41,18 +48,16 @@ prepare() {
 }
 
 build() {
-	local lit=/usr/lib/llvm$_llvmver/bin/lit
-
 	CFLAGS="$CFLAGS -O2 -DNDEBUG -g1" \
 	CXXFLAGS="$CXXFLAGS -O2 -DNDEBUG -g1" \
-	CC=clang CXX=clang++ \
+	CC=clang-$_llvmver CXX=clang++-$_llvmver \
 	cmake -B build -G Ninja -Wno-dev \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_SKIP_INSTALL_RPATH=ON \
 		-DBUILD_SHARED_LIBS=ON \
 		-DLLVM_INCLUDE_TESTS="$(want_check && echo ON || echo OFF)" \
-		-DLLVM_EXTERNAL_LIT=$lit \
+		-DLLVM_EXTERNAL_LIT=/usr/lib/llvm$_llvmver/bin/lit \
 		-DLLD_BUILT_STANDALONE=ON \
 		-DCMAKE_EXE_LINKER_FLAGS="$LDFLAGS -Wl,-z,stack-size=2097152"
 	cmake --build build
