testing/electron: upgrade to 34.3.4

--- a/testing/electron/APKBUILD
+++ b/testing/electron/APKBUILD
@@ -1,11 +1,11 @@
 # Contributor: lauren n. liberda <lauren@selfisekai.rocks>
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=electron
-pkgver=33.4.6
+pkgver=34.3.4
 _gittag=v"${pkgver/_beta/-beta.}"
 pkgrel=0
-_chromium=130.0.6723.191
-_copium_tag=129.1
+_chromium=132.0.6834.210
+_copium_tag=131.2
 _depot_tools=495b23b39aaba2ca3b55dd27cadc523f1cb17ee6
 pkgdesc="Electron cross-platform desktop toolkit"
 url="https://github.com/electron/electron"
@@ -151,13 +151,9 @@ source="
 	electron-launcher.sh
 	"
 _copium_patches="
-	cr124-iwyu-sys-select-dawn-terminal.patch
-	cr126-aarch64-musl-unsupported-relocation.patch
 	cr129-ffmpeg-no-noh264parse.patch
-	cr129-musl-metricts-imports.patch
+	cr131-v8-non4k-pages.patch
 	"
-# Avoid conflicting providers
-sonameprefix="$pkgname:"
 # tests are todo for some base checks
 options="!check net suid"
 builddir="$srcdir/electron-$_gittag-$_chromium"
@@ -547,10 +543,10 @@ lang() {
 }
 
 sha512sums="
-4178e53d25f1922285d6941ce139aee0ec04d560bca7e8fc300701fa968768a716e9b8d10db1d243746a7b66939ca8ec0847f390222c0dd855d9eab18a3c2271  electron-v33.4.6-130.0.6723.191.tar.zst
-6138b3dbf3903c78f4ca1ed5a6c3c3c485471ded31976010484ce8893d03953df2b8f066a4fe84bbde5ae7ef9bbff664ef917e247b2e95dd471de40f2774d7d0  copium-129.1.tar.gz
+965b8217d890247e422515071ac1c201e5c14a08317fc26e4a60d11b0879979a54b68b00c73babcd6e611989c5e7f00651c20a2cebe737fc97499eec3eb9820d  electron-v34.3.4-132.0.6834.210.tar.zst
+a5217c70ad3c40bbbe75b8c9c62158c69d64bc1e17338b6395718e03baba962fb9bf3bf610f9e569c3c38b5bb1dd7972b1da413776c6ec2afdd42cbbf051cfb1  copium-131.2.tar.gz
 29bb685e03356a77df5fd347cdf55194cc8b3265c421cc76e54d64edefc329dbcb052deb26b22e8f587ce68456876c071de1b7d258dd0fcc6ee66c875ec4a020  chromium-revert-drop-of-system-java.patch
-53b7cdee8f7bfb4c9371cb385c473e34ed3d8ac7efaa43c0af061107560be30d8747b07fb0b16c01079b8c770f2c721bb5a8081313b7c126856ea4078a74da2a  compiler.patch
+d9cc4a37a0311d23ae315a8d8124f8dbf60db8cc4a3943818638174b20387f1d770d00871f6608957b246ad956abca43c22ea0b072724287f2947e1909e47323  compiler.patch
 4057cc78f10bfd64092bc35a373869abb1d68b880cdbca70422f39ffd78a929c19c7728d4d4c40709aaba25581148a93ae5343e724849fd35323062ed68753fa  disable-dns_config_service.patch
 2470904846e3adde2c9506f9e78220daca0932320b628dd3d427bf2b7c17a8f7880cb97e787b046c28de7aca642e1a8d30824d6049905976da77e7473baa64da  disable-failing-tests.patch
 5fc5c012c1db6cf1ba82f38c6f3f4f5ca3a209e47ac708a74de379b018e0649b7694877c9571ef79002dde875ffc07b458a3355425f1c01867f362c66c2bc1bf  fc-cache-version.patch
