--- a/community/zotero/APKBUILD
+++ b/community/zotero/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Antoine Martin (ayakael) <dev@ayakael.net>
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=zotero
-pkgver=7.0.11
-pkgrel=1
+pkgver=7.0.15
+pkgrel=0
 _fxver=115.16.0
 _gittag=$pkgver
 pkgdesc="A free, easy-to-use tool to help you collect, organize, cite, and share your research sources."
@@ -10,12 +10,14 @@ url="https://www.zotero.org/"
 # s390x and riscv64: blocked by rust and cargo
 # armhf: build failure on armhf due to wasm
 # ppc64le: test suite stalls
-arch="x86_64 armv7 aarch64 x86"
+# armv7 and x86: since 7.0.12, note-editor depends on rollup.
+# 	Attempts at overriding with rollup/wasm-node has failed.
+arch="x86_64 aarch64"
 license="GPL-3.0-only AND LGPL-2.1-only AND LGPL-3.0-only AND MPL-2.0"
 depends="
 	ffmpeg-libavcodec
 	"
-_llvmver=19
+_llvmver=18
 makedepends="
 	alsa-lib-dev
 	automake
@@ -86,6 +88,7 @@ source="https://ftp.mozilla.org/pub/firefox/releases/${_fxver}esr/source/firefox
 	sandbox-fork.patch
 	sandbox-largefile.patch
 	sandbox-sched_setscheduler.patch
+	cbindgen-0.27.patch
 
 	stab.h
 
@@ -361,7 +364,7 @@ check() {
 	)
 
 	# test-suite is not very stable, false failure occur from time to time, thus never fails
-	CI=true LD_LIBRARY_PATH="$builddir"/zotero/app/staging/Zotero_linux xvfb-run "$builddir"/zotero/test/runtests.sh -x "$builddir"/zotero/app/staging/Zotero_linux/zotero
+	CI=true LD_LIBRARY_PATH="$builddir"/zotero/app/staging/Zotero_linux xvfb-run "$builddir"/zotero/test/runtests.sh -x "$builddir"/zotero/app/staging/Zotero_linux/zotero || true
 
 	rm -R "$builddir"/zotero/app/xulrunner/firefox # clean-up unused firefox install
 }
@@ -405,14 +408,15 @@ e4795b88e572bb3b6f009dbacc7872b59db2f8facbe2b07f14dd4f45a77c22049783581869f18c6b
 2518f2fc75b5db30058e0735f47d60fdf1e7adfaeee4b33fb2afb1bd9a616ce943fd88f4404d0802d4083703f4acf1d5ad42377218d025bc768807fbaf7e1609  sandbox-fork.patch
 b7d0a6126bdf6c0569f80aabf5b37ed2c7a35712eb8a0404a2d85381552f5555d4f97d213ea26cec6a45dc2785f22439376ed5f8e78b4fd664ef0223307b333e  sandbox-largefile.patch
 f8c3555ef6207933cbffbf4fc101a9b4c0d2990c0063162f0f0bde70ef0b46f86bfac42e7110695183424a87948de593f3927b2d8509ede3e4fc7bd8a1fad1ce  sandbox-sched_setscheduler.patch
+ef2704b37017669bf22be741517655028dcf12f2fe1048cf282193e97c67ca9d6b060e35f1303d9f04f7fea6445ead7927111d41aa48614b8f0c145417261f66  cbindgen-0.27.patch
 0b3f1e4b9fdc868e4738b5c81fd6c6128ce8885b260affcb9a65ff9d164d7232626ce1291aaea70132b3e3124f5e13fef4d39326b8e7173e362a823722a85127  stab.h
 382510375b1a2fa79be0ab79e3391a021ae2c022429ffbaa7e7a69166f99bb56d01e59a1b10688592a29238f21c9d6977672bd77f9fae439b66bdfe0c55ddb15  mozilla-location.keys
 fc45bc3ffb9404e5338ea26a9f04807b40f6f516324972cddd48bedb91b8bd7c6b8d4e03a0209020f5e67b703bc4ff89389985791b9bd544a0fc3951e2dc338e  vendor-prefs.js
 e1a0a4ff5cc1b53f13776ca11927d671426b0691e78e74a4adf2166d57bb2ae8ac409cc11a37ce5e2f680fdf05d5bc3849c33a9717aca1bb62d03ae5231a67fb  zotero.desktop
-b278d90aef179878e98853062e554c3afaa8c6f445be4060c97561e428bb6c480eb100786e99b484abc1a9b6c3f68416d817cf5efbaa7568d632763a7195a266  zotero-7.0.11.tar.gz
+7b0fb5a2084739796702a736642563976b499b9c651c3d0e7407610bd4c489587b7b2716f1e7570db4dbe21e43e66547546ed661b8b5a6d641e99e81202ad5eb  zotero-7.0.15.tar.gz
 746dbabbb3ea9199d17891e2079b9256d04843f548132178862117d2334694d98e2cc981945d72f31d0e5b2c42904d371633f6905996bb580aa0b5ae95c64ddc  zotero_build-modifications.patch
 337070ee4c44ccb35c6b6290c18327740bb9fccfd1a6ad1045782e83daa290b6ced7d53955d3a889f661d588738a64f2e7f383639f4c46be9fdf891168abc9ff  zotero_test-drop-build.patch
 f0e4f09496531222e8400959f9ef12852bca269eb3bf4c3b87ccaf92f28a12b9374461a1c79ad294a4393dbe30800aa1c85497033d0bc304fa8c198dfab3efd2  zotero_test-fix-chars.patch
 9dc390d8bae42e645cae45fe5551751d8f38d5c1b8b2cc0eec1c2191f4bde293ffb2c67cfc4de765f2d48b1da4d5fcd4f1c03711e5da3180cd1b63710ccf5599  zotero_test-push-timeout-to-30sec.patch
-3730281d9dc7f6b08c8ac31f057fd2baf6e1263835012959bd3c7118c3cd8b4e672513eb9cb7df0d97904207505a98c57465e307649d2ee6ff900b45401bce31  zotero_drop-jazzer.patch
+7fb791a386d30594a11ae3856295d5081000de7525036eb0b5836505bd4f0b13a4fe706400ad7efe00b75c2112cf3d59ea3542b6179ccd80f7ee1889349f441d  zotero_drop-jazzer.patch
 "
