community/zotero: upgrade to 7.0.15

--- a/community/zotero/APKBUILD
+++ b/community/zotero/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Antoine Martin (ayakael) <dev@ayakael.net>
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=zotero
-pkgver=7.0.11
+pkgver=7.0.15
 pkgrel=0
 _fxver=115.16.0
 _gittag=$pkgver
@@ -10,7 +10,9 @@ url="https://www.zotero.org/"
 # s390x and riscv64: blocked by rust and cargo
 # armhf: build failure on armhf due to wasm
 # ppc64le: test suite stalls
-arch="x86_64 armv7 aarch64 x86"
+# armv7 and x86: since 7.0.12, note-editor depends on rollup.
+# 	Attempts at overriding with rollup/wasm-node has failed.
+arch="x86_64 aarch64"
 license="GPL-3.0-only AND LGPL-2.1-only AND LGPL-3.0-only AND MPL-2.0"
 depends="
 	ffmpeg-libavcodec
@@ -409,10 +411,10 @@ f8c3555ef6207933cbffbf4fc101a9b4c0d2990c0063162f0f0bde70ef0b46f86bfac42e71106951
 382510375b1a2fa79be0ab79e3391a021ae2c022429ffbaa7e7a69166f99bb56d01e59a1b10688592a29238f21c9d6977672bd77f9fae439b66bdfe0c55ddb15  mozilla-location.keys
 fc45bc3ffb9404e5338ea26a9f04807b40f6f516324972cddd48bedb91b8bd7c6b8d4e03a0209020f5e67b703bc4ff89389985791b9bd544a0fc3951e2dc338e  vendor-prefs.js
 e1a0a4ff5cc1b53f13776ca11927d671426b0691e78e74a4adf2166d57bb2ae8ac409cc11a37ce5e2f680fdf05d5bc3849c33a9717aca1bb62d03ae5231a67fb  zotero.desktop
-b278d90aef179878e98853062e554c3afaa8c6f445be4060c97561e428bb6c480eb100786e99b484abc1a9b6c3f68416d817cf5efbaa7568d632763a7195a266  zotero-7.0.11.tar.gz
+7b0fb5a2084739796702a736642563976b499b9c651c3d0e7407610bd4c489587b7b2716f1e7570db4dbe21e43e66547546ed661b8b5a6d641e99e81202ad5eb  zotero-7.0.15.tar.gz
 746dbabbb3ea9199d17891e2079b9256d04843f548132178862117d2334694d98e2cc981945d72f31d0e5b2c42904d371633f6905996bb580aa0b5ae95c64ddc  zotero_build-modifications.patch
 337070ee4c44ccb35c6b6290c18327740bb9fccfd1a6ad1045782e83daa290b6ced7d53955d3a889f661d588738a64f2e7f383639f4c46be9fdf891168abc9ff  zotero_test-drop-build.patch
 f0e4f09496531222e8400959f9ef12852bca269eb3bf4c3b87ccaf92f28a12b9374461a1c79ad294a4393dbe30800aa1c85497033d0bc304fa8c198dfab3efd2  zotero_test-fix-chars.patch
 9dc390d8bae42e645cae45fe5551751d8f38d5c1b8b2cc0eec1c2191f4bde293ffb2c67cfc4de765f2d48b1da4d5fcd4f1c03711e5da3180cd1b63710ccf5599  zotero_test-push-timeout-to-30sec.patch
-3730281d9dc7f6b08c8ac31f057fd2baf6e1263835012959bd3c7118c3cd8b4e672513eb9cb7df0d97904207505a98c57465e307649d2ee6ff900b45401bce31  zotero_drop-jazzer.patch
+7fb791a386d30594a11ae3856295d5081000de7525036eb0b5836505bd4f0b13a4fe706400ad7efe00b75c2112cf3d59ea3542b6179ccd80f7ee1889349f441d  zotero_drop-jazzer.patch
 "
