community/tilix: fix segfault when opening preferences

--- a/community/tilix/APKBUILD
+++ b/community/tilix/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=tilix
 pkgver=1.9.6
-pkgrel=3
+pkgrel=4
 pkgdesc="Tiling terminal emulator for Linux"
 url="https://gnunn1.github.io/tilix-web/"
 arch="x86_64 aarch64 loongarch64"
 license="MPL-2.0"
-depends="gsettings-desktop-schemas libsecret dbus:org.freedesktop.Secrets vte3"
+depends="adwaita-icon-theme gsettings-desktop-schemas libsecret dbus:org.freedesktop.Secrets vte3"
 makedepends="
 	appstream
 	dconf-dev
